--- a/assets/corporate/css/style.css
+++ b/assets/corporate/css/style.css
@@ -18,10 +18,19 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 0 0 10px;
 }
 h1 {
-	margin-bottom: 15px;
+	margin-bottom: 17px;
 }
 .main h1 {
 	margin-top: -6px;
+}
+
+.pmaking{
+	font: 100 'Open Sans', sans-serif,"맑은고딕";
+	float: left;
+    color: #464b55;
+    font-size: 17px;
+    line-height: 1.8;
+    padding-bottom: 10px;
 }
 
 /***
@@ -500,7 +509,7 @@ body.page-header-fixed {
 .header-navigation > ul > li > a {
 	color: #333;
 	display: block;	
-	padding: 50px 12px 30px;
+	padding: 30px 12px 30px;
 }
 .header-navigation ul > li.active > a,
 .header-navigation ul > li > a:hover,
