--- a/assets/pages/css/slider.css
+++ b/assets/pages/css/slider.css
@@ -17,7 +17,8 @@
     vertical-align: middle;
 }
 .aaction{
-	style="color:white; text-decoration:none;"
+	color:white;
+	 text-decoration:none;
 }
 
 .center-block-body {
